Swagger tournamentControlle
