# swagger.json
@@ -74,6 +74,48 @@
         }
       }
     },
+    "/roster/rtournament": {
+      "get": {
+        "tags": [
+          "roster-api"
+        ],
+        "summary": "Obtiene un roster Tournament Obj",
+        "operationId": "getRosterTournament",
+        "description": "Obtiene el rouster tournament por tournamentId y participantId.\n",
+        "produces": [
+          "application/json"  
+        ], 
+        "parameters" : [ 
+          { 
+            "name" : "tournamentId",
+            "in" : "query",
+            "description" : "Challonge Tournament Id",
+            "required" : true,
+            "type" : "integer",
+            "default": 7968393
+          },
+          { 
+            "name" : "participantId",
+            "in" : "query",
+            "description" : "Challonge Participant Id",
+            "required" : true,
+            "type" : "integer",
+            "default": 112433886
+          }
+        ],          
+        "responses": {
+          "200": {
+            "description": "Resultado Tournament",
+            "schema": {
+              "type": "array"
+            }
+          },
+          "400": {
+            "description": "Mala petición"
+          }
+        }
+      }
+    },
     "/roster/list" : {
       "get" : {
         "tags" : [ "roster-api" ],
@@ -261,10 +303,10 @@
         "operationId": "getTournament",
         "description": "Obtiene el Torneo de Challonge, opcionales los participantes y partidas.\n",
         "produces": [
-          "application/json"
-        ],
+          "application/json"  
+        ], 
         "parameters" : [ 
-          {
+          { 
             "name" : "tournamentId",
             "in" : "query",
             "description" : "Challonge Tournament Id",
